--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
 		   <p>Feel free to contact me on my social media.</p>
-       <h4>Colaboraciones en:</h4>
+       <i>Colaboraciones en:</i>
 		    <div class="social-media">
 			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
 			  <a href="https://github.com/sofia-donoso21" target="_blank"><i class='fab fa-github'></i></a>
