--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	  <div id="contact">
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
-		   <p>Feel free to contact me on my social media.</p>
+		   <p><i>Para más información te invito a visitarme en Github y/o Codepen</i></p>
        <i>Colaboraciones en:</i>
 		    <div class="social-media">
 			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
